modification de l'astructure de prrojet

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 
 </head>
 
-<body class="bg-[url(/image/chawen.jpg)] bg-cover   ">
+<body class="bg-[url(chawen.jpg)] bg-cover   ">
 
     <h1 class="text-5xl text-center text-black flex items-center  justify-center">Shoot beyond the limits</h1>
     <div class="flex items-center justify-center h-[575px]">
-        <div
-            class="bg-green-700 hover:bg-green-600 rounded-full py-3 px-6 flex items-center justify-center mx-10 text-white">
-            Get started <a href="home.html">  <img src="/image/right.png" alt="right"></a>
-    </div>
+        
+             <a href="home.html" class="bg-green-700 hover:bg-green-600 rounded-full py-3 px-6 flex items-center justify-center mx-10 text-white">  Get started<img src="right.png" alt="right"></a>
+    
     </div>
 
 </body>
