--- a/profile.html
+++ b/profile.html
@@ -10,22 +10,22 @@
 <body>
 
 <header class="flex py-2 px-4">
-     <a href="description.html"><img src="/image/arrow.png" alt="arrow "></a>
+     <a href="description.html"><img src="arrow.png" alt="arrow "></a>
 </header>
     <section>
 
         <div class="flex justify-between">
             <h1 class="text-3xl font-bold text-center px-3 py-4 lg:py-8 lg:px-5  lg:mr-55"> Louis christophe</h1>
-            <img src="/image/people.jpg" alt="people" class=" rounded-full h-24 w-24 flex items-center justify-center   border-3 md:mr-12 md:mt-4 " width="120">
+            <img src="people.jpg" alt="people" class=" rounded-full h-24 w-24 flex items-center justify-center   border-3 md:mr-12 md:mt-4 " width="120">
         </div>
         <button class="flex justify-center ml-16 border-3 black rounded-full  px-5 py-2 lg:ml-145">bloger</button>
         <br>
         <h2 class="text-2xl font-bold text-center">Les voyageurs de temps</h2>
 
         <div class="  py-4 flex justify-around ">
-                    <p><img src="/image/view.png" alt="view" width="16">12K</p>
-                    <p><img src="/image/heart.png" alt="heart" width="16"> 150K </p>
-                    <p><img src="/image/commentaire.png" alt="commentaire" > 12 K</p>
+                    <p><img src="view.png" alt="view" width="16">12K</p>
+                    <p><img src="heart.png" alt="heart" width="16"> 150K </p>
+                    <p><img src="commentaire.png" alt="commentaire" > 12 K</p>
                 
 
                 </div>
@@ -48,38 +48,38 @@
         <br> <br>
 
         <div class="flex justify-around  my-6  md:flex-wrap ">
-            <img src="/image/koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190 md:my-5 ">
+            <img src="koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190 md:my-5 ">
 
-            <img src="/image/sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg md:w-190 md:my-5  ">
+            <img src="sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg md:w-190 md:my-5  ">
         </div>
         <div class="flex justify-around  md:flex-wrap">
-            <img src="/image/koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190  md:my-5">
+            <img src="koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190  md:my-5">
 
-            <img src="/image/sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190  md:my-5">
+            <img src="sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190  md:my-5">
         </div>
     </div>
     </div>
      <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 md:hidden">
         <div>
             <div class="hover:bg-green-500 rounded-full px-3 py-2" >
-                <a href="index.html"><img src="/image/home.png" alt="home" width="32"></a>
+                <a href="index.html"><img src="home.png" alt="home" width="32"></a>
                 
             </div>
         </div>
         <div>
             <button  class="hover:bg-green-500 rounded-full px-3 py-2">
-                <img src="/image/location.png" alt=" location" width="32">
+                <img src="location.png" alt=" location" width="32">
             </button>
         </div>
         <div>
             <button  class="hover:bg-green-500 rounded-full px-3 py-2">
-                <img src="/image/heart.png" alt="heart" width="32">
+                <img src="heart.png" alt="heart" width="32">
 
             </button>
         </div>
         <div>
             <button  class="hover:bg-green-500  bg-green-600 rounded-full px-3 py-2">
-                <img src="/image/user.png" alt="user" width="32">
+                <img src="user.png" alt="user" width="32">
             </button>
         </div>
 
