--- a/description.html
+++ b/description.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="flex justify-between  mx-2 py-4 ">
-             <a href="index.html" class="md:flex justify-start px-3"><img src="/image/arrow.png" alt="arrow  "></a>
+             <a href="index.html" class="md:flex justify-start px-3"><img src="arrow.png" alt="arrow  "></a>
 
           <nav class="hidden md:flex md:justify-end  gap-5  mr-8  underline"> 
         <a href="description.html">liked</a>
@@ -20,12 +20,12 @@
     </header>
     <div class="  grid   lg:grid-cols-12 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg  md:ml-55  lg:w-[120vh] lg:mt-5">
             <div class=" bg-white lg:col-span-12 shadow-lg rounded-lg">
-                <img src="/image/people.jpg" alt="people" class="rounded-t-lg w-full  md:h-[60vh] bg-cover bg-center md:w-[120vh] ">
+                <img src="people.jpg" alt="people" class="rounded-t-lg w-full  md:h-[60vh] bg-cover bg-center md:w-[120vh] ">
                 <div class="p-4 flex justify-around ">
                     <h2 class="text-2xl">yellow river</h2>
-                    <p><img src="/image/location.png" alt="location">maroc</p>
-                    <p><img src="/image/clock.png" alt="time" width="16"> 15 min </p>
-                    <p><img src="/image/view.png" alt="view" width="16"> 12 K</p>
+                    <p><img src="location.png" alt="location">maroc</p>
+                    <p><img src="clock.png" alt="time" width="16"> 15 min </p>
+                    <p><img src="view.png" alt="view" width="16"> 12 K</p>
 
                 </div>
                 <p class="text-center">BY ASMA ENNAFIA</p>
@@ -56,23 +56,23 @@
         <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 md:hidden">
         <div>
             <div class="hover:bg-green-500 bg-green-600 rounded-full px-3 py-2" >
-               <a href="index.html"> <img src="/image/home.png" alt="home" width="32"></a>
+               <a href="index.html"> <img src="home.png" alt="home" width="32"></a>
             </div>
         </div>
         <div>
             <button  class="hover:bg-green-500 rounded-full px-3 py-2">
-                <img src="/image/location.png" alt=" location" width="32">
+                <img src="location.png" alt=" location" width="32">
             </button>
         </div>
         <div>
             <button  class="hover:bg-green-500 rounded-full px-3 py-2">
-                <img src="/image/heart.png" alt="heart" width="32">
+                <img src="heart.png" alt="heart" width="32">
 
             </button>
         </div>
         <div>
             <div  class="hover:bg-green-500 rounded-full px-3 py-2">
-                <a href="profile.html"><img src="/image/user.png" alt="user" width="32"></a>
+                <a href="profile.html"><img src="user.png" alt="user" width="32"></a>
             </div>
         </div>
         
