--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="flex justify-between  mx-2 py-4 ">
-             <a href="index.html" class="md:flex justify-start px-3"><img src="/image/arrow.png" alt="arrow  "></a>
+             <a href="index.html" class="md:flex justify-start px-3"><img src="arrow.png" alt="arrow  "></a>
 
           <nav class="hidden md:flex md:justify-end  gap-5  mr-8  underline"> 
         <a href="home2.html">liked</a>
@@ -32,22 +32,22 @@
 
         <div class="  gap-4 flex  ">
             <div class=" ">
-                <img src="/image/yueying-sun-F9-Em4idgvU-unsplash.jpg" alt="yueying-sun-F9-Em4idgvU-unsplash"
+                <img src="yueying-sun-F9-Em4idgvU-unsplash.jpg" alt="yueying-sun-F9-Em4idgvU-unsplash"
                     class="rounded-full h-18 flex items-center justify-center w-18  ">
                 <h2 class="flex space-x-4 flex-wrap justify-center items-center">land</h2>
             </div>
             <div class=" ">
-                <img src="/image/pexels-juriadi-paddo-1757013033-35423377.jpg" alt="pexels-juriadi-paddo-1757013033-35423377"
+                <img src="pexels-juriadi-paddo-1757013033-35423377.jpg" alt="pexels-juriadi-paddo-1757013033-35423377"
                     class="rounded-full h-18 flex items-center justify-center w-18 ">
                 <p class="flex space-x-4 flex-wrap justify-center items-center">land</p>
             </div>
             <div class=" ">
-                <img src="/image/dmitry-spravko-YbkarNfl1GY-unsplash.jpg" alt="dmitry-spravko-YbkarNfl1GY-unsplash"
+                <img src="dmitry-spravko-YbkarNfl1GY-unsplash.jpg" alt="dmitry-spravko-YbkarNfl1GY-unsplash"
                     class="rounded-full h-18 flex items-center justify-center w-18 ">
                 <p class="flex space-x-4 flex-wrap justify-center items-center">yueying</p>
             </div>
             <div class=" ">
-                <img src="/image/daniel-snipes-OAzRbFHSZLE-unsplash.jpg" alt="daniel-snipes-OAzRbFHSZLE-unsplash"
+                <img src="daniel-snipes-OAzRbFHSZLE-unsplash.jpg" alt="daniel-snipes-OAzRbFHSZLE-unsplash"
                     class="rounded-full h-18 flex items-center justify-center w-18 ">
                 <p class="flex space-x-4 flex-wrap justify-center items-center">lila</p>
             </div>
@@ -74,12 +74,12 @@
     <div class="  grid cols-span-11   xl-grid-cols-3 mr-5 ml-5 lg:ml-70  border-2 border-black rounded-t-lg rounded-b-lg lg:w-[120vh] ">
             
             <div class=" bg-white shadow-lg  rounded-lg">
-                <img src="/image/people.jpg" alt="people" class=" lg:h-[60vh] bg-cover bg-center md:w-[120vh] rounded-t-lg w-full ">
+                <img src="people.jpg" alt="people" class=" lg:h-[60vh] bg-cover bg-center md:w-[120vh] rounded-t-lg w-full ">
                 <div class="  py-4 flex justify-around ">
                     <h2 class="text-2xl">yellow river</h2>
-                    <p><img src="/image/location.png" alt="location">maroc</p>
-                    <p><img src="/image/clock.png" alt="time" width="16"> 15 min </p>
-                    <p><img src="/image/view.png" alt="view" width="16"> 12 K</p>
+                    <p><img src="location.png" alt="location">maroc</p>
+                    <p><img src="clock.png" alt="time" width="16"> 15 min </p>
+                    <p><img src="view.png" alt="view" width="16"> 12 K</p>
                 
 
                 </div>
@@ -100,9 +100,9 @@
         <br> <br>
 
         <div class="flex justify-around ">
-            <img src="/image/koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg lg:h-[50vh] lg:w-[40vw] ">
+            <img src="koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg lg:h-[50vh] lg:w-[40vw] ">
 
-            <img src="/image/sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg lg:h-[50vh] lg:w-[40vw]">
+            <img src="sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg lg:h-[50vh] lg:w-[40vw]">
         </div>
     </div>
     <br>
@@ -112,23 +112,23 @@
     <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 lg:bg-white md:hidden">
         <div>
             <button class="hover:bg-green-500  bg-green-600 rounded-full px-3 py-2" >
-                <img src="/image/home.png" alt="home" width="32">
+                <img src="home.png" alt="home" width="32">
             </button>
         </div>
         <div>
             <button  class="hover:bg-green-500 rounded-full px-3 py-2">
-                <img src="/image/location.png" alt=" location" width="32">
+                <img src="location.png" alt=" location" width="32">
             </button>
         </div>
         <div>
             <button  class="hover:bg-green-500 rounded-full px-3 py-2">
-                <img src="/image/heart.png" alt="heart" width="32">
+                <img src="heart.png" alt="heart" width="32">
 
             </button>
         </div>
         <div>
             <div  class="hover:bg-green-500 rounded-full px-3 py-2">
-              <a href="profile.html">  <img src="/image/user.png" alt="user" width="32" ></a>
+              <a href="profile.html">  <img src="user.png" alt="user" width="32" ></a>
             </div>
         </div>
 
