modification de l'astructure de prrojet

--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
                 
 
                 </div>
-                <a href="home2.html"><p class="text-center">rounded-b-lg</p></a>
+                <a href="description.html"><p class="text-center link-underline">rounded-b-lg</p></a>
                 <br>
                 <br>
             </div>
