modification de l'astructure de prrojet

--- a/description.html
+++ b/description.html
@@ -1,84 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <title>home2</title>
 </head>
+
 <body>
     <header class="flex justify-between  mx-2 py-4 ">
-             <a href="index.html" class="md:flex justify-start px-3"><img src="arrow.png" alt="arrow  "></a>
+        <a href="index.html" class="md:flex justify-start px-3"><img src="arrow.png" alt="arrow  "></a>
 
-          <nav class="hidden md:flex md:justify-end  gap-5  mr-8  underline"> 
-        <a href="description.html">liked</a>
-        <a href="index.html">location</a>
-        <a href="profile.html">profile</a>
+        <nav class="hidden md:flex md:justify-end  gap-5  mr-8  underline">
+            <a href="description.html">liked</a>
+            <a href="index.html">location</a>
+            <a href="profile.html">profile</a>
 
-    </nav>
+        </nav>
     </header>
-    <div class="  grid   lg:grid-cols-12 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg  md:ml-55  lg:w-[120vh] lg:mt-5">
-            <div class=" bg-white lg:col-span-12 shadow-lg rounded-lg">
-                <img src="people.jpg" alt="people" class="rounded-t-lg w-full  md:h-[60vh] bg-cover bg-center md:w-[120vh] ">
-                <div class="p-4 flex justify-around ">
-                    <h2 class="text-2xl">yellow river</h2>
-                    <p><img src="location.png" alt="location">maroc</p>
-                    <p><img src="clock.png" alt="time" width="16"> 15 min </p>
-                    <p><img src="view.png" alt="view" width="16"> 12 K</p>
+    <div
+        class="  grid   lg:grid-cols-12 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg  md:ml-55  lg:w-[120vh] lg:mt-5">
+        <div class=" bg-white lg:col-span-12 shadow-lg rounded-lg">
+            <img src="alexandra-tran-dvaF23kPc-0-unsplash.jpg" alt="people"
+                class="rounded-t-lg w-full  md:h-[60vh] bg-cover bg-center md:w-[120vh] ">
+            <div class="p-4 flex justify-around ">
+                <h2 class="text-2xl">yellow river</h2>
+                <p><img src="location.png" alt="location">maroc</p>
+                <p><img src="clock.png" alt="time" width="16"> 15 min </p>
+                <p><img src="view.png" alt="view" width="16"> 12 K</p>
 
-                </div>
-                <p class="text-center">BY ASMA ENNAFIA</p>
-                <br>
-                <br>
             </div>
-
-
-        </div>
-
-
-
-        <div class="lg:px-5">
+            <p class="text-center">BY ASMA ENNAFIA</p>
             <br>
             <br>
-            <h1 class="text-center  md:text-balance"> Immerse yourself in the history and culture of Rabat with a personalized guided tour. Discover its iconic sites, hidden secrets, and benefit from expert advice for an authentic and rewarding experience. An unforgettable half-day of culture, history and beauty awaits you.
-                See itinerar Wander blue-painted lanes and enjoy sweeping views over the Atlantic.
-                Immerse yourself in the history and culture of Rabat with a personalized guided tour. Discover its iconic sites, hidden secrets, and benefit from expert advice for an authentic and rewarding experience. An unforgettable half-day of culture, history and beauty awaits you.
-                See itinerary
-                Wander blue-painted lanes and enjoy sweeping views over the Atlantic.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore iure, dignissimos corporis, fuga est quam quas animi dolores corrupti adipisci officiis numquam neque deleniti maxime pariatur laborum, nostrum suscipit mollitia!
-            </h1>
         </div>
 
 
+    </div>
 
 
-        <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 md:hidden">
+
+    <div class="lg:px-5">
+        <br>
+        <br>
+        <h1 class="text-center  md:text-balance"> Immerse yourself in the history and culture of Rabat with a
+            personalized guided tour. Discover its iconic sites, hidden secrets, and benefit from expert advice for an
+            authentic and rewarding experience. An unforgettable half-day of culture, history and beauty awaits you.
+            See itinerar Wander blue-painted lanes and enjoy sweeping views over the Atlantic.
+            Immerse yourself in the history and culture of Rabat with a personalized guided tour. Discover its iconic
+            sites, hidden secrets, and benefit from expert advice for an authentic and rewarding experience. An
+            unforgettable half-day of culture, history and beauty awaits you.
+            See itinerary
+            Wander blue-painted lanes and enjoy sweeping views over the Atlantic.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore iure, dignissimos corporis, fuga est quam
+            quas animi dolores corrupti adipisci officiis numquam neque deleniti maxime pariatur laborum, nostrum
+            suscipit mollitia!
+        </h1>
+    </div>
+
+
+
+
+    <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-gray-400 md:hidden">
         <div>
-            <div class="hover:bg-green-500 bg-green-600 rounded-full px-3 py-2" >
-               <a href="index.html"> <img src="home.png" alt="home" width="32"></a>
+            <div class="hover:bg-blue-300 bg-blue-400 rounded-full px-3 py-2">
+                <a href="index.html"> <img src="home.png" alt="home" width="32"></a>
             </div>
         </div>
         <div>
-            <button  class="hover:bg-green-500 rounded-full px-3 py-2">
+            <button class="hover:bg-blue-300 rounded-full px-3 py-2">
                 <img src="location.png" alt=" location" width="32">
             </button>
         </div>
         <div>
-            <button  class="hover:bg-green-500 rounded-full px-3 py-2">
+            <button class="hover:bg-blue-300 rounded-full px-3 py-2">
                 <img src="heart.png" alt="heart" width="32">
 
             </button>
         </div>
         <div>
-            <div  class="hover:bg-green-500 rounded-full px-3 py-2">
+            <div class="hover:bg-blue-300 rounded-full px-3 py-2">
                 <a href="profile.html"><img src="user.png" alt="user" width="32"></a>
             </div>
         </div>
-        
 
-    </div>
 
-    
+
+
+
 </body>
+
 </html>
