--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
     <div class="  grid cols-span-11   xl-grid-cols-3 mr-5 ml-5 lg:ml-70  border-2 border-black rounded-t-lg rounded-b-lg lg:w-[120vh] ">
             
             <div class=" bg-white shadow-lg  rounded-lg">
-                <img src="people.jpg" alt="people" class=" lg:h-[60vh] bg-cover bg-center md:w-[120vh] rounded-t-lg w-full ">
+                <img src="alexandra-tran-dvaF23kPc-0-unsplash.jpg" alt="people" class=" lg:h-[60vh] bg-cover bg-center md:w-[900PX] rounded-t-lg w-full ">
                 <div class="  py-4 flex justify-around ">
                     <h2 class="text-2xl">yellow river</h2>
                     <p><img src="location.png" alt="location">maroc</p>
@@ -89,7 +89,28 @@
             </div>
 
 
-        </div></div>
+        </div>
+    </div>
+
+    <div
+        class="  grid   lg:grid-cols-12 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg  md:ml-70  lg:w-[120vh] lg:mt-5">
+        <div class=" bg-white lg:col-span-12 shadow-lg rounded-lg">
+            <img src="jonny-gios-9nb3S2dPn9Y-unsplash.jpg" alt="people"
+                class="rounded-t-lg w-full  md:h-[60vh] bg-cover bg-center md:w-[900PX] ">
+            <div class="p-4 flex justify-around ">
+                <h2 class="text-2xl">yellow river</h2>
+                <p><img src="location.png" alt="location">maroc</p>
+                <p><img src="clock.png" alt="time" width="16"> 15 min </p>
+                <p><img src="view.png" alt="view" width="16"> 12 K</p>
+
+            </div>
+            <p class="text-center">BY ASMA ENNAFIA</p>
+            <br>
+            <br>
+        </div>
+
+
+    </div>
     </section>
 
 
@@ -109,7 +130,7 @@
     <br>
 
 
-    <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 lg:bg-white md:hidden">
+    <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-gray-400 lg:bg-white md:hidden">
         <div>
             <button class="hover:bg-green-500  bg-green-600 rounded-full px-3 py-2" >
                 <img src="home.png" alt="home" width="32">
