--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body class="bg-[url(chawen.jpg)] bg-cover   ">
+<body class="bg-[url(1.jpg)] bg-cover   ">
 
     <h1 class="text-5xl text-center text-black flex items-center  justify-center">Shoot beyond the limits</h1>
     <div class="flex items-center justify-center h-[575px]">
