--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
 
     <title>profile</title>
 </head>
-<body>
+<body >
 
 <header class="flex py-2 px-4">
      <a href="description.html"><img src="arrow.png" alt="arrow "></a>
@@ -16,7 +16,7 @@
 
         <div class="flex justify-between">
             <h1 class="text-3xl font-bold text-center px-3 py-4 lg:py-8 lg:px-5  lg:mr-55"> Louis christophe</h1>
-            <img src="people.jpg" alt="people" class=" rounded-full h-24 w-24 flex items-center justify-center   border-3 md:mr-12 md:mt-4 " width="120">
+            <img src="chawen.jpg" alt="people" class=" rounded-full h-24 w-24 flex items-center justify-center   border-3 md:mr-12 md:mt-4 " width="120">
         </div>
         <button class="flex justify-center ml-16 border-3 black rounded-full  px-5 py-2 lg:ml-145">bloger</button>
         <br>
@@ -36,8 +36,8 @@
                 <button class="border-3 black rounded-full  px-5 py-2">beach</button>
                 <button class="border-3 black rounded-full  px-5 py-2">river</button>
                 <button class="border-3 black rounded-full  px-5 py-2">mountais </button>
-                <button class="border-3 black rounded-full  px-5 py-2">  forest</button>       
-                <button class="border-3 black rounded-full  px-5 py-2">  forest</button>
+                <button class="border-3 black rounded-full  px-5 py-2">  forest</button> 
+                
 
                 </div>
     </section>
@@ -48,37 +48,37 @@
         <br> <br>
 
         <div class="flex justify-around  my-6  md:flex-wrap ">
-            <img src="koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190 md:my-5 ">
+            <img src="daryadarya-livejournal-0K5qTttsHOo-unsplash.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190 md:my-5 ">
 
-            <img src="sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg md:w-190 md:my-5  ">
+            <img src="maria-novoseletskaya-2lAU9Ib3FC8-unsplash.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg md:w-190 md:my-5  ">
         </div>
         <div class="flex justify-around  md:flex-wrap">
-            <img src="koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190  md:my-5">
+            <img src="alexandra-tran-dvaF23kPc-0-unsplash.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190  md:my-5">
 
             <img src="sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190  md:my-5">
         </div>
     </div>
     </div>
-     <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 md:hidden">
+     <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-gray-400 md:hidden">
         <div>
-            <div class="hover:bg-green-500 rounded-full px-3 py-2" >
+            <div class="hover:bg-blue-300 rounded-full px-3 py-2" >
                 <a href="index.html"><img src="home.png" alt="home" width="32"></a>
                 
             </div>
         </div>
         <div>
-            <button  class="hover:bg-green-500 rounded-full px-3 py-2">
+            <button  class="hover:bg-blue-300 rounded-full px-3 py-2">
                 <img src="location.png" alt=" location" width="32">
             </button>
         </div>
         <div>
-            <button  class="hover:bg-green-500 rounded-full px-3 py-2">
+            <button  class="hover:bg-blue-300 rounded-full px-3 py-2">
                 <img src="heart.png" alt="heart" width="32">
 
             </button>
         </div>
         <div>
-            <button  class="hover:bg-green-500  bg-green-600 rounded-full px-3 py-2">
+            <button  class="hover:bg-blue-300  bg-blue-400 rounded-full px-3 py-2">
                 <img src="user.png" alt="user" width="32">
             </button>
         </div>
