modification de l'astructure de prrojet

--- a/home.html
+++ b/home.html
@@ -25,29 +25,29 @@
 
 
     <div>
-        <h1 class="text-4xl p-2 text-center">bloger of the week</h1>
+        <h1 class="text-4xl p-2 text-center text-blue-400 text-opacity-100  ">bloger of the week</h1>
     </div>
 
     <section>
 
         <div class="  gap-4 flex  ">
             <div class=" ">
-                <img src="yueying-sun-F9-Em4idgvU-unsplash.jpg" alt="yueying-sun-F9-Em4idgvU-unsplash"
+                <img src="pexels-chloe-laurens-2156921958-35814411.jpg" alt="yueying-sun-F9-Em4idgvU-unsplash"
                     class="rounded-full h-18 flex items-center justify-center w-18  ">
                 <h2 class="flex space-x-4 flex-wrap justify-center items-center">land</h2>
             </div>
             <div class=" ">
-                <img src="pexels-juriadi-paddo-1757013033-35423377.jpg" alt="pexels-juriadi-paddo-1757013033-35423377"
+                <img src="pexels-clement-proust-363898785-16929743.jpg" alt="pexels-juriadi-paddo-1757013033-35423377"
                     class="rounded-full h-18 flex items-center justify-center w-18 ">
                 <p class="flex space-x-4 flex-wrap justify-center items-center">land</p>
             </div>
             <div class=" ">
-                <img src="dmitry-spravko-YbkarNfl1GY-unsplash.jpg" alt="dmitry-spravko-YbkarNfl1GY-unsplash"
+                <img src="pexels-juriadi-paddo-1757013033-35423377.jpg" alt="dmitry-spravko-YbkarNfl1GY-unsplash"
                     class="rounded-full h-18 flex items-center justify-center w-18 ">
                 <p class="flex space-x-4 flex-wrap justify-center items-center">yueying</p>
             </div>
             <div class=" ">
-                <img src="daniel-snipes-OAzRbFHSZLE-unsplash.jpg" alt="daniel-snipes-OAzRbFHSZLE-unsplash"
+                <img src="pexels-chloe-laurens-2156921958-35814411.jpg" alt="daniel-snipes-OAzRbFHSZLE-unsplash"
                     class="rounded-full h-18 flex items-center justify-center w-18 ">
                 <p class="flex space-x-4 flex-wrap justify-center items-center">lila</p>
             </div>
@@ -60,21 +60,21 @@
     <h1 class="text-3xl  p-3   font-bold ">What do you want to read ?</h1>
     <section>
         <div class=" gap-4 flex overflow-x-scroll   ">
-            <button class="rounded-full py-3 px-6 bg-green-600 hover:bg-green-400 border-2 border-black"> all</button>
+            <button class="rounded-full py-3 px-6 bg-blue-400 hover:bg-green-400 border-2 border-black"> all</button>
             <button class="rounded-full py-3 px-6 bg-white hover:bg-grey-50 border-2 border-black"> forest</button>
-            <button class="rounded-full py-3 px-6 bg-white hover:bg-pink-50 border-2 border-black"> Beach</button>
-            <button class="rounded-full py-3 px-6 bg-white hover:bg-pink-50 border-2 border-black"> nature </button>
-            <button class="rounded-full py-3 px-6 bg-white hover:bg-pink-50 border-2 border-black"> mountains</button>
-            <button class="rounded-full py-3 px-6 bg-white hover:bg-pink-50 border-2 border-black"> river</button>
+            <button class="rounded-full py-3 px-6 bg-white hover:bg-grey-50 border-2 border-black"> Beach</button>
+            <button class="rounded-full py-3 px-6 bg-white hover:bg-grey-50 border-2 border-black"> nature </button>
+            <button class="rounded-full py-3 px-6 bg-white hover:bg-grey-50 border-2 border-black"> mountains</button>
+            <button class="rounded-full py-3 px-6 bg-white hover:bg-grey-50 border-2 border-black"> river</button>
 
         </div>
         <br>
         <br>
-        <div class="grid lg:grid-cols-12 ">
+        <div class="  grid lg:grid-cols-12 ">
     <div class="  grid cols-span-11   xl-grid-cols-3 mr-5 ml-5 lg:ml-70  border-2 border-black rounded-t-lg rounded-b-lg lg:w-[120vh] ">
             
             <div class=" bg-white shadow-lg  rounded-lg">
-                <img src="alexandra-tran-dvaF23kPc-0-unsplash.jpg" alt="people" class=" lg:h-[60vh] bg-cover bg-center md:w-[900PX] rounded-t-lg w-full ">
+                <img src="alexandra-tran-dvaF23kPc-0-unsplash.jpg" alt="people" class="  lg:h-[60vh] bg-cover bg-center md:w-[900PX] rounded-t-lg w-full ">
                 <div class="  py-4 flex justify-around ">
                     <h2 class="text-2xl">yellow river</h2>
                     <p><img src="location.png" alt="location">maroc</p>
@@ -92,22 +92,7 @@
         </div>
     </div>
 
-    <div
-        class="  grid   lg:grid-cols-12 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg  md:ml-70  lg:w-[120vh] lg:mt-5">
-        <div class=" bg-white lg:col-span-12 shadow-lg rounded-lg">
-            <img src="jonny-gios-9nb3S2dPn9Y-unsplash.jpg" alt="people"
-                class="rounded-t-lg w-full  md:h-[60vh] bg-cover bg-center md:w-[900PX] ">
-            <div class="p-4 flex justify-around ">
-                <h2 class="text-2xl">yellow river</h2>
-                <p><img src="location.png" alt="location">maroc</p>
-                <p><img src="clock.png" alt="time" width="16"> 15 min </p>
-                <p><img src="view.png" alt="view" width="16"> 12 K</p>
-
-            </div>
-            <p class="text-center">BY ASMA ENNAFIA</p>
-            <br>
-            <br>
-        </div>
+    
 
 
     </div>
@@ -132,23 +117,23 @@
 
     <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-gray-400 lg:bg-white md:hidden">
         <div>
-            <button class="hover:bg-green-500  bg-green-600 rounded-full px-3 py-2" >
+            <button class="hover:bg-blue-300  bg-blue-400 rounded-full px-3 py-2" >
                 <img src="home.png" alt="home" width="32">
             </button>
         </div>
         <div>
-            <button  class="hover:bg-green-500 rounded-full px-3 py-2">
+            <button  class="hover:bg-blue-300 rounded-full px-3 py-2">
                 <img src="location.png" alt=" location" width="32">
             </button>
         </div>
         <div>
-            <button  class="hover:bg-green-500 rounded-full px-3 py-2">
+            <button  class="hover:bg-blue-300 rounded-full px-3 py-2">
                 <img src="heart.png" alt="heart" width="32">
 
             </button>
         </div>
         <div>
-            <div  class="hover:bg-green-500 rounded-full px-3 py-2">
+            <div  class="hover:bg-blue-300 rounded-full px-3 py-2">
               <a href="profile.html">  <img src="user.png" alt="user" width="32" ></a>
             </div>
         </div>
