--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="bg-[url(1.jpg)] bg-cover   ">
 
-    <h1 class="text-5xl text-center text-black flex items-center  justify-center">Shoot beyond the limits</h1>
+    <h1 class="text-5xl text-center text-black flex items-center  justify-center py-4">Shoot beyond the limits</h1>
     <div class="flex items-center justify-center h-[575px]">
         
              <a href="home.html" class="bg-green-700 hover:bg-green-600 rounded-full py-3 px-6 flex items-center justify-center mx-10 text-white">  Get started<img src="right.png" alt="right"></a>
