en cette partie j'ai la modification de quelque erreur

--- a/home.html
+++ b/home.html
@@ -115,7 +115,7 @@
     <br>
 
 
-    <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-gray-400 lg:bg-white md:hidden">
+    <div class=" flex justify-around sticky bottom-0 border-1 rounded-full px-3 py-4 bg-white lg:bg-white md:hidden">
         <div>
             <button class="hover:bg-blue-300  bg-blue-400 rounded-full px-3 py-2" >
                 <img src="home.png" alt="home" width="32">
@@ -133,8 +133,9 @@
             </button>
         </div>
         <div>
-            <div  class="hover:bg-blue-300 rounded-full px-3 py-2">
-              <a href="profile.html">  <img src="user.png" alt="user" width="32" ></a>
+            <div  class="hover:bg-blue-300  rounded-full px-3 py-2">
+              <a href="profile.html">
+                   <img src="user.png" alt="user" width="32" ></a>
             </div>
         </div>
 
