--- a/profile.html
+++ b/profile.html
@@ -47,19 +47,19 @@
 
         <br> <br>
 
-        <div class="flex justify-around  my-6  md:flex-wrap ">
-            <img src="daryadarya-livejournal-0K5qTttsHOo-unsplash.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190 md:my-5 ">
+        <div class="flex justify-around  my-6  md:flex gap-3 ">
+            <img src="daryadarya-livejournal-0K5qTttsHOo-unsplash.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-130 md:my-5 ">
 
-            <img src="maria-novoseletskaya-2lAU9Ib3FC8-unsplash.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg md:w-190 md:my-5  ">
+            <img src="maria-novoseletskaya-2lAU9Ib3FC8-unsplash.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg md:w-130 md:my-5  ">
         </div>
-        <div class="flex justify-around  md:flex-wrap">
-            <img src="alexandra-tran-dvaF23kPc-0-unsplash.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190  md:my-5">
+        <div class="flex justify-around  md:flex gap-3">
+            <img src="alexandra-tran-dvaF23kPc-0-unsplash.jpg" alt="koba" width="180" class="rounded-t-lg h-30  rounded-b-lg  md:w-130 md:h-90 md:my-5">
 
-            <img src="sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190  md:my-5">
+            <img src="sale.jpg" alt="sale" width="180"   class="rounded-t-lg h-30 rounded-b-lg  md:w-130  md:h-90 md:my-5">
         </div>
     </div>
     </div>
-     <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-gray-400 md:hidden">
+     <div class=" flex justify-around sticky bottom-0 border-1 rounded-full px-3 py-4 bg-white md:hidden">
         <div>
             <div class="hover:bg-blue-300 rounded-full px-3 py-2" >
                 <a href="index.html"><img src="home.png" alt="home" width="32"></a>
