--- a/description.html
+++ b/description.html
@@ -63,7 +63,7 @@
 
 
 
-    <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-gray-400 md:hidden">
+    <div class=" flex justify-around sticky bottom-0 border-1 rounded-full px-3 py-4 bg-white md:hidden">
         <div>
             <div class="hover:bg-blue-300 bg-blue-400 rounded-full px-3 py-2">
                 <a href="index.html"> <img src="home.png" alt="home" width="32"></a>
