en cette partie j'ai cprrect quelque probleme

--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
                 
 
                 </div>
-                <a href="description.html"><p class="text-center  underline">rounded-b-lg</p></a>
+                <a href="description.html"><p class="text-center  underline">see more</p></a>
                 <br>
                 <br>
             </div>
